--- a/license_portal/licenses/templates/admin_notifications.html
+++ b/license_portal/licenses/templates/admin_notifications.html
@@ -7,10 +7,49 @@
 </head>
 <body>
     <h1>SDK Expired Licenses</h1>
-    <p>Hello {{ recipient_name }},</p>
     <p>This is an update regarding the expired licenses of some clients.</p>
     <p>The expiration date corresponds to {{ expiration_date }}.</p>
     <p>The list of client email addresses is as follows:</p>
+    <p>Licenses which expire on '{{ four_months_date }}': 
+        <ul>
+            <li>
+            {% for license in four_months_licenses %}
+                <span>POC Contact Name: {{ license.poc_contact_name }} </span>
+                <span>POC Contact Email: {{ license.poc_contact_email }} </span>
+                <span>License ID: {{ license.id }} </span>
+                <span>License type: {{ license.type }} </span>
+                <span>Pacakge name: {{ license.package_name }}</span>
+            {% endfor %}
+            </li>
+        </ul>
+    </p>
+    <p>Licenses which expire on '{{ one_month_date }}': 
+        <ul>
+            <li>
+            {% for license in one_month_licenses %}
+                <span>POC Contact Name: {{ license.poc_contact_name }} </span>
+                <span>POC Contact Email: {{ license.poc_contact_email }} </span>
+                <span>License ID: {{ license.id }} </span>
+                <span>License type: {{ license.type }} </span>
+                <span>Pacakge name: {{ license.package_name }}</span>
+            {% endfor %}
+            </li>
+        </ul>
+    </p>
+    <p>Licenses which expire on '{{ one_week_date }}': 
+        <ul>
+            <li>
+            {% for license in four_one_week_licenses %}
+                <span>POC Contact Name: {{ license.poc_contact_name }} </span>
+                <span>POC Contact Email: {{ license.poc_contact_email }} </span>
+                <span>License ID: {{ license.id }} </span>
+                <span>License type: {{ license.type }} </span>
+                <span>Pacakge name: {{ license.package_name }}</span>
+            {% endfor %}
+            </li>
+        </ul>
+    </p>
+    <p>Please take appropriate action to renew your license.</p>
     <p>Thank you!</p>
 </body>
 </html>
